--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 quarkus.http.port=8091
 
 # kafka configs
-mp.messaging.outgoing.quotation-channel.connector = smallrye-kafka
-mp.messaging.outgoing.quotation-channel.topic = proposal
+mp.messaging.outgoing.proposal.connector = smallrye-kafka
+mp.messaging.outgoing.proposal.topic = proposal
 mp.messaging.connector.smallrye-kafka.bootstrap.servers = localhost:9092
 
 # configure your datasource
