--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -11,3 +11,8 @@ quarkus.datasource.username = postgres
 quarkus.datasource.password = 1234
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/reportdb
 quarkus.hibernate-orm.database.generation = update
+
+# keycloack security configs
+quarkus.oidc.auth-server-url=http://localhost:8180/realms/quarkus
+quarkus.oidc.client-id=backend-service
+quarkus.oidc.credentials.secret=secret
