--- a/gatewaw-bff/src/main/resources/application.properties
+++ b/gatewaw-bff/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.http.port=8095
+quarkus.http.port=8096
 
 # keycloack security configs
 quarkus.oidc.auth-server-url=http://localhost:8180/realms/quarkus
@@ -11,8 +11,8 @@ quarkus.oidc-client.credentials.secret=${quarkus.oidc.credentials.secret}
 quarkus.oidc-client.grant.type=password
 
 # rest client configuration
-org.br.mineradora.client.ProposalRestClient/mp-rest/url=http://localhost:8091
-org.br.mineradora.client.ReportRestClient/mp-rest/url=http://localhost:8081
+br.com.mineradora.client.ProposalRestClient/mp-rest/url=http://localhost:8091
+br.com.mineradora.client.ReportRestClient/mp-rest/url=http://localhost:8081
 
 #swagger-ui - openapi
 quarkus.swagger-ui.always-include = true
