--- a/gatewaw-bff/src/main/resources/application.properties
+++ b/gatewaw-bff/src/main/resources/application.properties
@@ -18,3 +18,9 @@ br.com.mineradora.client.ReportRestClient/mp-rest/url=http://localhost:8081
 quarkus.swagger-ui.always-include = true
 quarkus.smallrye-openapi.info-description = BR Mineradora: Trade de Minerio - Back-End For Front-End (BFF) - API
 
+
+# open-tracing
+quarkus.jaeger.service-name=gateway-bff
+quarkus.jaeger.sampler-type=const
+quarkus.jaeger.sampler-param=1
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
